prettify a few things

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <noscript>Please enable Javascript.</noscript>
         
         <div id="import-ydk">
-            Import .ydk file: <input type="file" id="ydk" accept=".ydk" />
+            <div id="ydk-container">Import .ydk file: <input type="file" id="ydk" accept=".ydk" /></div>
         </div>
         
         <div id="zoom-viewer">
