add preload api setting

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <div>Stack duplicate cards <div id="switch-stackDuplicates" class="switch"><div class="switch-bar"></div><div class="switch-button"></div></div></div>
                 <div>Stack cards left-to-right <div id="switch-stackLTR" class="switch"><div class="switch-bar"></div><div class="switch-button"></div></div></div>
                 <div>Use high-resolution cards in overview <div  id="switch-highResCards" class="switch"><div class="switch-bar"></div><div class="switch-button"></div></div></div>
+                <div>Preload card data from API <div  id="switch-preloadAPI" class="switch"><div class="switch-bar"></div><div class="switch-button"></div></div></div>
             </div>
         </div>
     </body>
