--- a/index.html
+++ b/index.html
@@ -57,9 +57,15 @@
         
         <div id="toolbox">
             <div id="toolbox-main">
-                <div id="toolbox-settings">Settings</div>
-                <div id="toolbox-export">Export Deck</div>
-                <div id="toolbox-close">Close Deck</div>
+                <div id="toolbox-main-container">
+                    <div id="toolbox-settings">Settings</div>
+                    <div id="toolbox-export">Export Deck</div>
+                    <div id="toolbox-close">Close Deck</div>
+                </div>
+                <div id="toolbox-main-export" style="display: none;">
+                    <div id="toolbox-export-ydk">As YDK</div>
+                    <div id="toolbox-export-text">As text</div>
+                </div>
             </div>
         </div>
         
@@ -69,7 +75,6 @@
                 <div>Stack duplicate cards <div id="switch-stackDuplicates" class="switch"><div class="switch-bar"></div><div class="switch-button"></div></div></div>
                 <div>Stack cards left-to-right <div id="switch-stackLTR" class="switch"><div class="switch-bar"></div><div class="switch-button"></div></div></div>
                 <div>Use high-resolution cards in overview <div  id="switch-highResCards" class="switch"><div class="switch-bar"></div><div class="switch-button"></div></div></div>
-                <div>Preload card data from API <div  id="switch-preloadAPI" class="switch"><div class="switch-bar"></div><div class="switch-button"></div></div></div>
             </div>
         </div>
     </body>
