--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         
         <title>Deck Viewer</title>
         
+        <link rel="manifest" href="manifest.webmanifest" />
         <link rel="stylesheet" href="cardviewer.css" />
         <link rel="stylesheet" href="modals.css" />
         <link rel="stylesheet" href="toolbox.css" />
