--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
         <title>Deck Viewer</title>
         
-        <link rel="manifest" href="manifest.webmanifest" />
+        <link rel="manifest" href="webmanifest.json" />
         <link rel="stylesheet" href="cardviewer.css" />
         <link rel="stylesheet" href="modals.css" />
         <link rel="stylesheet" href="toolbox.css" />
