get rid of overcomplicated expand animation stuff for toolbox

--- a/index.html
+++ b/index.html
@@ -58,15 +58,11 @@
         
         <div id="toolbox">
             <div id="toolbox-main">
-                <div id="toolbox-main-container">
-                    <div id="toolbox-settings">Settings</div>
-                    <div id="toolbox-export">Export Deck</div>
-                    <div id="toolbox-close">Close Deck</div>
-                </div>
-                <div id="toolbox-main-export" style="display: none;">
-                    <div id="toolbox-export-ydk">As YDK</div>
-                    <div id="toolbox-export-text">As text</div>
-                </div>
+                <div id="toolbox-settings" class="noselect">Settings</div>
+                <div id="toolbox-copyurl" class="noselect">Copy URL</div>
+                <div id="toolbox-close" class="noselect">Close Deck</div>
+                <div id="toolbox-export-ydk" class="noselect">Export as YDK</div>
+                <div id="toolbox-export-text" class="noselect">Export as text</div>
             </div>
         </div>
         
