export features (text and ydk)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div id="toolbox-copyurl" class="noselect">Copy URL<div class="toolbox-indicator">Copied!</div></div>
                 <div id="toolbox-close" class="noselect">Close Deck</div>
                 <div id="toolbox-export-ydk" class="noselect">Export as YDK</div>
-                <div id="toolbox-export-text" class="noselect">Export as text</div>
+                <div id="toolbox-export-text" class="noselect">Export as text<div class="toolbox-indicator">Working...</div></div>
             </div>
         </div>
         
