some final cleanup

--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
         
         <div id="toolbox">
             <div id="toolbox-main">
-                <div id="toolbox-settings" class="noselect">Settings</div>
-                <div id="toolbox-copyurl" class="noselect">Copy URL<div class="toolbox-indicator">Copied!</div></div>
-                <div id="toolbox-close" class="noselect">Close Deck</div>
-                <div id="toolbox-export-ydk" class="noselect">Export as YDK</div>
-                <div id="toolbox-export-text" class="noselect">Export as text<div class="toolbox-indicator">Working...</div></div>
+                <div>
+                    <div id="toolbox-settings" class="noselect">Settings</div>
+                    <div id="toolbox-title" class="noselect">Change Title</div>
+                    <div id="toolbox-close" class="noselect">Close Deck</div>
+                </div>
+                <div>
+                    <div id="toolbox-copyurl" class="noselect">Copy URL<div class="toolbox-indicator">Copied!</div></div>
+                    <div id="toolbox-export-ydk" class="noselect">Export as YDK</div>
+                    <div id="toolbox-export-text" class="noselect">Export as text<div class="toolbox-indicator">Working...</div></div>
+                </div>
             </div>
         </div>
         
