enable deck data compression

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <body>
         <script src="cardviewer.js"></script>
         <script src="carddata.js"></script>
+        <script src="compression.js"></script>
         <script src="modals.js"></script>
         <script src="settings.js"></script>
         <script src="toolbox.js"></script>
